force-app/main/default/objects/sixsense__Batch_Log_Error__c/sixsense__Batch_Log_Error__c.object-meta.xml
<CustomObject>
    <label>6sense Batch Log Error</label>
    <nameField>
        <displayFormat>BLE-{00000000}</displayFormat>
        <label>Batch Log Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>6sense Batch Log Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>