force-app/main/default/objects/sixsense__Batch_Log_Error__c/fields/sixsense__Batch_Log__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Batch_Log__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Batch Log</label>
    <referenceTo>sixsense__Batch_Log__c</referenceTo>
    <relationshipName>Batch_Log_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>