force-app/main/default/objects/sixsense__Batch_Log_Error__c/fields/sixsense__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>