force-app/main/default/objects/sixsense__Batch_Log_Error__c/fields/sixsense__Hashcode__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Hashcode__c</fullName>
    <label>Hashcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>