force-app/main/default/objects/sixsense__Batch_Log_Error__c/fields/sixsense__Impact_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Impact_Record_Id__c</fullName>
    <description>The record Id that this error is related to.</description>
    <label>Impact Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>