force-app/main/default/objects/sixsense__Batch_Log_Error__c/fields/sixsense__Is_Ignored__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Is_Ignored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ignored</label>
    <type>Checkbox</type>
</CustomField>