force-app/main/default/objects/sixsense__Batch_Log_Error__c/fields/sixsense__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Stack_Trace__c</fullName>
    <description>Detailed stack trace showing additional error information</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>